--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Kylie Rokoszak | Student at Northampton Community College
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
+  <meta name="description" content="My name is Kylie and I am a sophmore at Northampton Community College. My major is general studies and I plan on transfering to the College of Charleston in the fall to finish my junior and senior year of college.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="My name is Kylie and some of my skills are that I am a good problem solver, a good communicator, and a good cook." />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Kylie Rokoszak</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Student at Northampton Community College</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -67,12 +67,7 @@
 
   <main role="main">
 
-    <!-- ***** Work ***** -->
-
-    <section class="work" id="work">
-      <div class="row">
-        <h2>My Work</h2>
-        <div class="work__boxes">
+   
 
           <!-- Each div with the work__box class is a project. -->
 
@@ -93,7 +88,7 @@
                 <a href="https://nisar.surge.sh" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/Computer-and-Information-Science/fizz-buzz-Kylieroko" title="Fizz Buzz" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -107,8 +102,7 @@
             <div class="work__text">
               <h3>Calculator</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                .
               </p>
               <ul class="work__list">
                 <li>React</li>
@@ -121,8 +115,8 @@
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://github.com/Computer-and-Information-Science/supermarket-checkout-simulation-Kylieroko">
+                  <img src="./images/github.svg" class="work__code" title="Supermarket Checkout Simulation" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -135,8 +129,7 @@
             <div class="work__text">
               <h3>Notificator</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                .
               </p>
               <ul class="work__list">
                 <li>React</li>
@@ -149,8 +142,8 @@
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://github.com/Computer-and-Information-Science/batting-order-Kylieroko">
+                  <img src="./images/github.svg" class="work__code" title="Batting Order" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -171,24 +164,13 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              My Name is Kylie Rokoszak and I am a sophmore at Northampton Community College. I love school
+              and love to work with others. I attended Stroudsburg High School and graduated in the year 2022.
+              I developed a love for computer science because I have some family friends who pursued computer science
+              which made me want to give it a try and even though I'm still learning at a slow pace, I really 
+              enjoy the work!
             </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
-          </div>
-
-          <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
+           
   <!-- ***** Contact ***** -->
 
   <section class="contact" id="contact">
@@ -204,56 +186,9 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:kylie.rokoszak@student.northampton.edu" class="btn">kylie.rokoszak@student.northampton.edu</a>
       </div>
     </div>
   </section>
 
-  <!-- ***** Footer ***** -->
 
-  <footer role="contentinfo" class="footer">
-    <div class="row">
-      <!-- Update the links to point to your accounts -->
-      <ul class="footer__social-links">
-        <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
-            <img src="./images/github.svg" class="footer__social-image" alt="Github">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
-            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
-          </a>
-        </li>
-      </ul>
-
-      <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
-    </div>
-  </footer>
-
-  <a href="#top" class="back-to-top" title="Back to Top">
-    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
-  </a>
-  <script src="./index.js"></script>
-</body>
-
-</html>
